--- a/package/libs/openssl/Makefile
+++ b/package/libs/openssl/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=3.0.8
 PKG_RELEASE:=4
 
 ifdef CONFIG_OPENSSL_WITH_ASM
-PKG_USE_MIPS16:=0
+PKG_BUILD_FLAGS:=no-mips16
 endif
 
 PKG_BUILD_PARALLEL:=1
