--- a/package/libs/openssl/Makefile
+++ b/package/libs/openssl/Makefile
@@ -12,7 +12,7 @@ PKG_VERSION:=3.0.8
 PKG_RELEASE:=4
 
 ifdef CONFIG_OPENSSL_WITH_ASM
-PKG_BUILD_FLAGS:=no-mips16
+PKG_BUILD_FLAGS:=no-mips16 gc-sections
 endif
 
 PKG_BUILD_PARALLEL:=1
@@ -345,8 +345,7 @@ define Build/Configure
 	)
 endef
 
-TARGET_CFLAGS += $(FPIC) -ffunction-sections -fdata-sections
-TARGET_LDFLAGS += -Wl,--gc-sections
+TARGET_CFLAGS += $(FPIC)
 
 define Build/Compile
 	+$(MAKE) $(PKG_JOBS) -C $(PKG_BUILD_DIR) \
