--- a/package/libs/libbpf/Makefile
+++ b/package/libs/libbpf/Makefile
@@ -19,7 +19,7 @@ PKG_ABI_VERSION:=$(firstword $(subst .,$(space),$(PKG_VERSION)))
 
 PKG_MAINTAINER:=Tony Ambardar <itugrok@yahoo.com>
 
-PKG_BUILD_FLAGS:=no-mips16
+PKG_BUILD_FLAGS:=no-lto
 PKG_BUILD_PARALLEL:=1
 PKG_INSTALL:=1
 
