packages: assign PKG_CPE_ID for all missing packages
The PKG_CPE_ID links to NIST CPE version 2.2.
Assign PKG_CPE_ID to all remaining package which have a CPE ID.
Not every package has CPE id.

Related: https://github.com/openwrt/packages/issues/8534
Signed-off-by: Alexander Couzens <lynxis@fe80.eu>

--- a/package/utils/lua/Makefile
+++ b/package/utils/lua/Makefile
@@ -21,6 +21,7 @@ PKG_BUILD_FLAGS:=no-lto
 
 PKG_LICENSE:=MIT
 PKG_LICENSE_FILES:=COPYRIGHT
+PKG_CPE_ID:=cpe:/a:lua:lua
 
 HOST_PATCH_DIR := ./patches-host
 
